<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#E2E2E2">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="16dp"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blue_black_light"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cbItemCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="8dp"
                    android:background="@color/blue_black_light"
                    android:gravity="center_vertical"
                    android:shadowColor="@color/white" />

                <TextView
                    android:id="@+id/txtItemName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="8dp"
                    android:fontFamily="serif"
                    android:gravity="center_vertical"
                    android:text="@string/itemName"
                    android:textColor="@color/white"
                    android:textSize="28sp" />

                <TextView
                    android:id="@+id/txtItemQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/itemQuantity"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/txtItemPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/itemPrice"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <ImageButton
                    android:id="@+id/ibDelete"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="6dp"
                    android:background="@color/blue_black_light"
                    android:gravity="center_vertical"
                    android:src="@drawable/ic_action_delete" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_margin="2dp">

                <TextView
                    android:id="@+id/txtTotalCostTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:text="@string/totalCostTitle"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/txtItemTotalCost"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:text="@string/totalCost"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:visibility="invisible" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
